[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "configurations"
version = "0.1.0"
description = "A tool for managing atomic configurations in HDF5 format"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "click<8.2.0",
    "rich>=13.0.0",
    "h5py>=3.10.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "boto3==1.34.131",
    "s3fs>=2024.2.0",
    "ase>=3.22.0",
    "pandas>=2.3.3,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[project.scripts]
configurations = "configurations.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/configurations"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["src"] 